--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/index.js",
     "start:ts": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts test/**/*.ts --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": {
@@ -26,7 +29,8 @@
     "eslint-plugin-promise": "6.1.1",
     "nodemon": "3.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vitest": "0.34.6"
   },
   "dependencies": {
     "express": "4.18.2"
